--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "lint": "",
+    "preview": "vite preview",
+    "lint:fix": "eslint ./src --ext .jsx,.tsx --Quiet --fix --ignore-path ./.git ignore",
+    "lint:format": "prettier --loglevel warn --write \"./**/*.{js, jsx, ts, tsx, css, md, json}\" "
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -28,9 +30,11 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.11.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^3.3.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
-  }
+  },
+  "pre-commit": "lint"
 }
